load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["event.go"],
    importpath = "github.com/elafros/eventing/pkg/event",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_xtest",
    srcs = ["event_test.go"],
    importpath = "github.com/elafros/eventing/pkg/event_test",
    deps = [":go_default_library"],
)
