load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["receive_adapter.go"],
    importpath = "github.com/elafros/eventing/sample/gcp_pubsub",
    visibility = ["//visibility:private"],
    deps = [
        "//vendor/cloud.google.com/go/pubsub:go_default_library",
        "//vendor/golang.org/x/net/context:go_default_library",
    ],
)

go_binary(
    name = "gcp_pubsub",
    embed = [":go_default_library"],
    pure = "on",
    visibility = ["//visibility:public"],
)

load("@io_bazel_rules_docker//go:image.bzl", "go_image")

go_image(
    name = "image",
    binary = ":gcp_pubsub",
    visibility = ["//visibility:public"],
)
