package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "action.go",
        "doc.go",
        "elafros.go",
        "logging.go",
        "service.go",
    ],
    importpath = "github.com/elafros/eventing/pkg/delivery/action",
    deps = [
        "//pkg/event:go_default_library",
        "//vendor/github.com/golang/glog:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
        "//vendor/k8s.io/client-go/kubernetes:go_default_library",
    ],
)
