load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["interface.go"],
    importpath = "github.com/elafros/eventing/pkg/client/informers/externalversions/bind",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/client/informers/externalversions/bind/v1alpha1:go_default_library",
        "//pkg/client/informers/externalversions/internalinterfaces:go_default_library",
    ],
)
