load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "bind.go",
        "bind_client.go",
        "doc.go",
        "eventsource.go",
        "eventtype.go",
        "generated_expansion.go",
    ],
    importpath = "github.com/elafros/eventing/pkg/client/clientset/versioned/typed/bind/v1alpha1",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/apis/bind/v1alpha1:go_default_library",
        "//pkg/client/clientset/versioned/scheme:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/runtime/serializer:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/types:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/watch:go_default_library",
        "//vendor/k8s.io/client-go/rest:go_default_library",
    ],
)
