load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "doc.go",
        "eventing_client.go",
        "flow.go",
        "flow_client.go",
        "generated_expansion.go",
    ],
    importpath = "github.com/elafros/eventing/pkg/client/clientset/versioned/typed/eventing/v1beta2",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/apis/eventing/v1beta2:go_default_library",
        "//pkg/client/clientset/versioned/scheme:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/runtime/serializer:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/types:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/watch:go_default_library",
        "//vendor/k8s.io/client-go/rest:go_default_library",
    ],
)
