load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "doc.go",
        "fake_bind.go",
        "fake_bind_client.go",
        "fake_eventsource.go",
        "fake_eventtype.go",
    ],
    importpath = "github.com/elafros/binding/pkg/client/clientset/versioned/typed/bind/v1alpha1/fake",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/apis/bind/v1alpha1:go_default_library",
        "//pkg/client/clientset/versioned/typed/bind/v1alpha1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/labels:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/runtime/schema:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/types:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/watch:go_default_library",
        "//vendor/k8s.io/client-go/rest:go_default_library",
        "//vendor/k8s.io/client-go/testing:go_default_library",
    ],
)
