load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "doc.go",
        "fake_eventing_client.go",
    ],
    importpath = "github.com/elafros/eventing/pkg/client/clientset/versioned/typed/eventing/v1beta2/fake",
    visibility = ["//visibility:public"],
)
